<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResumeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="@dimen/big_margin"
            android:id="@+id/iv_cv_photo"
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_height="100dp" />

        <Button
            android:layout_marginTop="@dimen/big_margin"
            android:id="@+id/btn_cv_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_cv_photo"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/tv_cv_name"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/tv_cv_name"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:id="@+id/et_cv_name"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout

            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/tv_cv_address"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/tv_cv_address"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:id="@+id/et_cv_address"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="100dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/tv_cv_experience"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/tv_cv_experience"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:id="@+id/et_cv_experience"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/tv_cv_dob"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/tv_cv_dob"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:id="@+id/et_cv_date"
                android:layout_width="match_parent"
                android:inputType="date"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cv_under_18"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/tv_cv_under_18"
            android:visibility="gone"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/btn_cv_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_cv_generate"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cv_image_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/btn_cv_image_share"
                />

            <Button
                android:id="@+id/btn_cv_link_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/btn_cv_link_share"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>