<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.GenerateCV">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_gen_cv_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/ic_launcher_background"
            />
    </LinearLayout>



    <TextView
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/tv_gen_cv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_cv_name"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/side_margin"
        />

    <LinearLayout
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>

    <TextView
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:id="@+id/tv_gen_cv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_cv_number"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/side_margin"
        />

    <LinearLayout
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>

    <TextView
        android:id="@+id/tv_gen_cv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_cv_address"
        android:singleLine="false"
        android:lines="4"
        android:maxLines="4"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/side_margin"
        />

    <LinearLayout
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>

    <TextView
        android:id="@+id/tv_gen_cv_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_cv_dob"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/side_margin"
        />

    <LinearLayout
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>

    <TextView
        android:id="@+id/tv_gen_cv_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_cv_experience"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/side_margin"
        />

    <LinearLayout
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>



</LinearLayout>